vandam-server/vandam/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vandam
  namespace: vandam-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vandam
  strategy:
    type: Recreate # This makes sure only one instance is running at a time
  template:
    metadata:
      labels:
        app: vandam
    spec:
      containers:
      - name: vandam
        image: ghcr.io/manyfold3d/manyfold:0.150.0
        ports:
        - containerPort: 3214
          name: http
        volumeMounts:
        - name: data-pv
          mountPath: /libraries
      volumes:
      - name: data-pv
        persistentVolumeClaim:
          claimName: vandam-data
