vandam-server/vandam/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vandam
  namespace: vandam-server
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: vandam
