vandam-server/vandam/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vandam
  namespace: vandam-server
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: vandam.wavecat.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vandam
            port:
              name: http
  tls:
  - hosts:
    - vandam.wavecat.net
    secretName: vandam.wavecat.net
